codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__esc_interrupt_goal_paused_footer.snap
---
source: tui/src/chatwidget/tests/status_and_layout.rs
expression: snapshot
---
"                                                                                "
"• Working (0s • esc to interrupt)                                               "
"                                                                                "
"                                                                                "
"› Ask Corbanu Terminal to do anything                                           "
"                                                                                "
"  Ambient GLM 5.2 via ambient standard · /tmp/proj… Goal paused (/goal resume)  "
